--- a/src/sass/blocks/catalog-list.scss
+++ b/src/sass/blocks/catalog-list.scss
@@ -3,10 +3,7 @@
 }
 
 .catalog-list__item {
-  position: relative;
-
-  &:first-child {
-    &::before,
+  &--show-more {
     &::after {
       content: "";
       display: block;
@@ -15,28 +12,6 @@
       height: 1px;
 
       background-color: $background-color-9;
-
-      position: absolute;
-      z-index: 3;
-
-      @media (min-width: $tablet-width) {
-        display: none;
-      }
-    }
-  }
-
-  &--line {
-    &::after {
-      content: "";
-      display: block;
-
-      width: 100%;
-      height: 1px;
-
-      background-color: $background-color-9;
-
-      position: absolute;
-      z-index: 3;
 
       @media (min-width: $tablet-width) {
         display: none;
