--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,29 @@
 /* utils */
 
 /* components */
+@import "./components/main-header.scss";
+@import "./components/main-nav.scss";
+@import "./components/main-container.scss";
+@import "./components/nutrition.scss";
+@import "./components/button.scss";
+@import "./components/program-types.scss";
+@import "./components/program-type.scss";
+@import "./components/work-principle.scss";
+@import "./components/living-example.scss";
+@import "./components/cat-result.scss";
+@import "./components/location.scss";
+@import "./components/main-footer.scss";
+@import "./components/social.scss";
+@import "./components/catalog.scss";
+@import "./components/catalog-card.scss";
+@import "./components/additional-products.scss";
+@import "./components/additional-product-card.scss";
+@import "./components/main-form.scss";
+@import "./components/cat-information.scss";
+@import "./components/label-text.scss";
+@import "./components/label-radio.scss";
+@import "./components/cantact-details.scss";
+@import "./components/label-text.scss";
+@import "./components/comment.scss";
+@import "./components/additional.scss";
+@import "./components/label-checkbox.scss";
