--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,10 @@
 // Начните писать стили здесь
 
 /* global */
+@import "./global/global.scss";
+@import "./global/fonts.scss";
+@import "./global/variables.scss";
+@import "./global/mixins.scss";
 
 /* utils */
 
