--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,6 +7,7 @@ $color-3: #68b738;
 $color-4: #f2f2f2;
 $color-5: #444444;
 $color-6: #111111;
+$color-7: #eaeaea;
 
 /* background-color */
 $background-color-1: #000000;
@@ -15,3 +16,4 @@ $background-color-3: #68b738;
 $background-color-4: #f2f2f2;
 $background-color-5: #444444;
 $background-color-6: #111111;
+$background-color-7: #eaeaea;
