Добавил миксины и переменную шрифтов для навигации

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -17,3 +17,8 @@ $background-color-4: #f2f2f2;
 $background-color-5: #444444;
 $background-color-6: #111111;
 $background-color-7: #eaeaea;
+
+/* main-nav fonts */
+$font-text-nav-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
+$font-text-nav-list-tablet: 400 1.8rem/1.33 "Oswald", Arial, sans-serif;
+$font-text-nav-list-desktop: 400 2rem / normal "Oswald", Arial, sans-serif;
