Добавил переменные для шрифтов

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -22,3 +22,34 @@ $background-color-7: #eaeaea;
 $font-text-nav-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
 $font-text-nav-list-tablet: 400 1.8rem/1.33 "Oswald", Arial, sans-serif;
 $font-text-nav-list-desktop: 400 2rem / normal "Oswald", Arial, sans-serif;
+
+/* location-fonts */
+$font-title-location-mobile: 400 1.6rem/1.25 "Oswald", Arial, sans-serif;
+$font-title-location-tablet: 400 2rem/1.3 "Oswald", Arial, sans-serif;
+$font-title-location-desktop: 400 2rem/1.3 "Oswald", Arial, sans-serif;
+
+$font-text-location-mobile: 400 1.4rem/1.42 "Lato", Arial, sans-serif;
+$font-text-location-tablet: 400 1.6rem/1.25 "Lato", Arial, sans-serif;
+$font-text-location-desktop: 400 1.6rem/1.25 "Lato", Arial, sans-serif;
+
+/* title-fonts */
+$font-title-x-large-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
+$font-title-x-large-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
+$font-title-x-large-desktop: 400 6rem/1 "Oswald", Arial, sans-serif;
+
+$font-title-large-mobile: 400 3.6rem/1.11 "Oswald", Arial, sans-serif;
+$font-title-large-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
+$font-title-large-desktop: 400 6rem/1 "Oswald", Arial, sans-serif;
+
+$font-title-medium-mobile: 400 2.4rem/1.54 "Oswald", Arial, sans-serif;
+$font-title-medium-tablet: 400 3.6rem/1 "Oswald", Arial, sans-serif;
+$font-title-medium-desktop: 400 3.6rem/1 "Oswald", Arial, sans-serif;
+
+/* text-fonts */
+$font-text-medium-mobile: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+$font-text-medium-tablet: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+$font-text-medium-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+
+$font-text-small-mobile: 400 1.2rem/1 "Lato", Arial, sans-serif;
+$font-text-small-tablet: 400 1.4rem/1 "Lato", Arial, sans-serif;
+$font-text-small-desktop: 400 1.4rem/1 "Lato", Arial, sans-serif;
