--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -32,6 +32,11 @@ $font-text-location-mobile: 400 1.4rem/1.42 "Lato", Arial, sans-serif;
 $font-text-location-tablet: 400 1.6rem/1.25 "Lato", Arial, sans-serif;
 $font-text-location-desktop: 400 1.6rem/1.25 "Lato", Arial, sans-serif;
 
+/* nutrition-fonts */
+$font-text-nutrition-mobile: 400 1.4rem/1 "Oswald", Arial, sans-serif;
+$font-text-nutrition-tablet: 400 2rem/1 "Oswald", Arial, sans-serif;
+$font-text-nutrition-desktop: 400 2rem/1 "Oswald", Arial, sans-serif;
+
 /* title-fonts */
 $font-title-x-large-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
 $font-title-x-large-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
