--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -37,6 +37,11 @@ $font-text-nutrition-mobile: 400 1.4rem/1 "Oswald", Arial, sans-serif;
 $font-text-nutrition-tablet: 400 2rem/1 "Oswald", Arial, sans-serif;
 $font-text-nutrition-desktop: 400 2rem/1 "Oswald", Arial, sans-serif;
 
+/* program-type fonts */
+$font-button-program-type-mobile: 400 1.6rem/1 "Oswald", Arial, sans-serif;
+$font-button-program-type-tablet: 400 2rem / normal "Oswald", Arial, sans-serif;
+$font-button-program-type-desktop: 400 2rem / normal "Oswald", Arial, sans-serif;
+
 /* title-fonts */
 $font-title-x-large-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
 $font-title-x-large-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
