Стилизвал шрифт в живом примере

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -42,6 +42,20 @@ $font-button-program-type-mobile: 400 1.6rem/1 "Oswald", Arial, sans-serif;
 $font-button-program-type-tablet: 400 2rem / normal "Oswald", Arial, sans-serif;
 $font-button-program-type-desktop: 400 2rem / normal "Oswald", Arial, sans-serif;
 
+/* living-example fonts */
+$font-title-living-example-heading-mobile: 400 2.4rem/1 "Oswald", Arial,
+  sans-serif;
+$font-title-living-example-heading-tablet: 400 3rem/1.23 "Oswald", Arial,
+  sans-serif;
+$font-title-living-example-heading-desktop: 400 3rem/1.23 "Oswald", Arial,
+  sans-serif;
+
+$font-title-living-example-result-mobile: 400 1.4rem/1.42 "Oswald", Arial,
+  sans-serif;
+$font-title-living-example-result-tablet: 400 2rem/1 "Oswald", Arial, sans-serif;
+$font-title-living-example-result-desktop: 400 2rem/1 "Oswald", Arial,
+  sans-serif;
+
 /* title-fonts */
 $font-title-x-large-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
 $font-title-x-large-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
