Стилизовал шрифт для логотипа html-academy

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -56,6 +56,9 @@ $font-title-living-example-result-tablet: 400 2rem/1 "Oswald", Arial, sans-serif
 $font-title-living-example-result-desktop: 400 2rem/1 "Oswald", Arial,
   sans-serif;
 
+/* html-academy-logo fonts */
+$font-html-academy-logo: 400 1.6rem / normal "Lato", Arial, sans-serif;
+
 /* title-fonts */
 $font-title-x-large-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
 $font-title-x-large-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
