--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -82,6 +82,20 @@ $font-text-catalog-card-mobile: 400 1.2rem/1.33 "Lato", "Arial", sans-serif;
 $font-text-catalog-card-tablet: 400 1.6rem/1 "Lato", "Arial", sans-serif;
 $font-text-catalog-card-desktop: 400 1.6rem/1 "Lato", "Arial", sans-serif;
 
+/* additonal-products fonts */
+$font-heading-additional-products-mobile: 400 1.6rem/1 "Oswald", "Arial",
+  sans-serif;
+$font-heading-additional-products-tablet: 400 2rem/1 "Oswald", "Arial",
+  sans-serif;
+$font-heading-additional-products-desktop: 400 2rem/1 "Oswald", "Arial",
+  sans-serif;
+
+$font-text-additional-products-mobile: 400 1.4rem/1 "Lato", "Arial", sans-serif;
+$font-text-additional-products-tablet: 400 1.6rem/1.25 "Lato", "Arial",
+  sans-serif;
+$font-text-additional-products-desktp: 400 1.6rem/1.25 "Lato", "Arial",
+  sans-serif;
+
 /* title-fonts */
 $font-title-x-large-mobile: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 $font-title-x-large-tablet: 400 6rem/1 "Oswald", "Arial", sans-serif;
