--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -93,8 +93,12 @@ $font-heading-additional-products-desktop: 400 2rem/1 "Oswald", "Arial",
 $font-text-additional-products-mobile: 400 1.4rem/1 "Lato", "Arial", sans-serif;
 $font-text-additional-products-tablet: 400 1.6rem/1.25 "Lato", "Arial",
   sans-serif;
-$font-text-additional-products-desktp: 400 1.6rem/1.25 "Lato", "Arial",
+$font-text-additional-products-desktop: 400 1.6rem/1.25 "Lato", "Arial",
   sans-serif;
+
+$font-text-gift-mobile: 400 1.6rem/1.25 "Lato", "Arial", sans-serif;
+$font-text-gift-tablet: 400 1.6rem/1.25 "Lato", "Arial", sans-serif;
+$font-text-gift-desktop: 400 1.6rem/1.25 "Lato", "Arial", sans-serif;
 
 /* title-fonts */
 $font-title-x-large-mobile: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
