Приступил к верстке формы, добавил стили тексту

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -100,6 +100,11 @@ $font-text-gift-mobile: 400 1.6rem/1.25 "Lato", "Arial", sans-serif;
 $font-text-gift-tablet: 400 1.6rem/1.25 "Lato", "Arial", sans-serif;
 $font-text-gift-desktop: 400 1.6rem/1.25 "Lato", "Arial", sans-serif;
 
+/* label-fonts */
+$font-label-mobile: 400 1.6rem/1.12 "Oswald", "Arial", sans-serif;
+$font-label-tablet: 400 2rem / normal "Oswald", "Arial", sans-serif;
+$font-label-desktop: 400 2rem / normal "Oswald", "Arial", sans-serif;
+
 /* title-fonts */
 $font-title-x-large-mobile: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 $font-title-x-large-tablet: 400 6rem/1 "Oswald", "Arial", sans-serif;
