Добавил задний фон в локации, завершил стилизацию шрифтов

--- a/source/sass/components/location.scss
+++ b/source/sass/components/location.scss
@@ -1,3 +1,9 @@
+.location__invation {
+  &--grey {
+    background-color: $background-color-4;
+  }
+}
+
 .location__invation-title {
   @include margin-reset;
   font: $font-title-location-mobile;
