--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -3,6 +3,6 @@
   @include button-reset;
   background-color: $background-color-3;
   color: $color-2;
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
 }
