--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,33 +7,33 @@
 @import "./global/mixins.scss";
 
 /* utils */
-@import "./utils/container.scss";
+// @import "./utils/container.scss";
 @import "./utils/visually-hidden.scss";
 
 /* components */
-@import "./components/main-header.scss";
+// @import "./components/main-header.scss";
 @import "./components/main-nav.scss";
 @import "./components/main-container.scss";
 @import "./components/nutrition.scss";
 @import "./components/button.scss";
-@import "./components/program-types.scss";
+// @import "./components/title.scss";
+// @import "./components/program-types.scss";
 @import "./components/program-type.scss";
 @import "./components/work-principle.scss";
 @import "./components/living-example.scss";
-@import "./components/cat-result.scss";
+// @import "./components/cat-result.scss";
 @import "./components/location.scss";
 @import "./components/main-footer.scss";
-@import "./components/social.scss";
-@import "./components/catalog.scss";
+// @import "./components/social.scss";
+// @import "./components/catalog.scss";
 @import "./components/catalog-card.scss";
 @import "./components/additional-products.scss";
 @import "./components/additional-product-card.scss";
-@import "./components/main-form.scss";
+// @import "./components/main-form.scss";
 @import "./components/cat-information.scss";
 @import "./components/label-text.scss";
 @import "./components/label-radio.scss";
 @import "./components/contact-details.scss";
-@import "./components/label-text.scss";
 @import "./components/comment.scss";
 @import "./components/additional.scss";
 @import "./components/label-checkbox.scss";
