--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,7 @@
 @import "./utils/visually-hidden.scss";
 
 /* components */
-// @import "./components/main-header.scss";
+@import "./components/main-header.scss";
 @import "./components/main-nav.scss";
 @import "./components/main-container.scss";
 @import "./components/nutrition.scss";
