Добавил переменные вьюпортов

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,5 +1,14 @@
 // Начните писать переменные здесь
 
+/* view-ports */
+$mobile-width: 320px;
+$mobile-width-only: 768px;
+
+$tablet-width: 769px;
+$tablet-width-only: 1439px;
+
+$desktop-width: 1440px;
+
 /* font-color */
 $color-1: #000000;
 $color-2: #ffffff;
