--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -1,3 +1,10 @@
-.main-header {
+.main-header__wrapper {
+  // display: flex;
+  // justify-content: space-between;
+
+  padding: 0 20px;
+
+  position: relative;
+
   background: url("../../img/logo-text-mobile.svg") no-repeat center 5px;
 }
