--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -1,3 +1,37 @@
+.main-nav__toggle {
+  @include button-reset;
+  position: relative;
+
+  width: 24px;
+  height: 17px;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.main-nav--closed .main-nav__toggle {
+  &::after {
+    content: "";
+    display: block;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 24px;
+    height: 2px;
+
+    background-color: $background-color-1;
+    box-shadow: 0px 7px 0 0 $background-color-1,
+      0px 14px 0 0 $background-color-1;
+  }
+}
+
 .main-nav__list {
   @include list-reset;
 }
