--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -1,10 +1,11 @@
 .main-header__wrapper {
-  // display: flex;
-  // justify-content: space-between;
-
   padding: 0 20px;
 
-  position: relative;
+  background: url("../../img/logo-text-mobile.svg") no-repeat center 23px;
+}
 
-  background: url("../../img/logo-text-mobile.svg") no-repeat center 5px;
+.main-header__link {
+  display: inline-block;
+  position: relative;
+  top: 9px;
 }
