добавил 3 ссылки на другие страницы, выровнил по pixel perfect

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -18,6 +18,7 @@ $color-5: #444444;
 $color-6: #111111;
 $color-7: #eaeaea;
 $color-8: #222222;
+$color-9: #e6e6e6;
 
 /* background-color */
 $background-color-1: #000000;
@@ -28,6 +29,7 @@ $background-color-5: #444444;
 $background-color-6: #111111;
 $background-color-7: #eaeaea;
 $background-color-8: #222222;
+$background-color-9: #e6e6e6;
 
 /* button-fonts */
 $font-button-nutrition-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
