--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -1,11 +1,13 @@
 .main-header__wrapper {
-  padding: 0 20px;
+  padding: 65px 0 0;
 
   background: url("../../img/logo-text-mobile.svg") no-repeat center 23px;
 }
 
 .main-header__link {
   display: inline-block;
+
   position: absolute;
-  top: 9px;
+  top: 10px;
+  left: 20px;
 }
