--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -1,15 +1,13 @@
 .main-nav {
   position: relative;
-
-  padding: 65px 0 0;
 }
 
 .main-nav__toggle {
   @include button-reset;
 
   position: absolute;
-  top: 23px;
-  right: -1px;
+  top: -43px;
+  right: 20px;
 
   width: 24px;
   height: 19px;
@@ -50,8 +48,12 @@
   display: none;
 }
 
+/* открытое меню */
 .main-nav--opened .main-nav__toggle {
   height: 24px;
+
+  top: -46px;
+  right: 19px;
 
   &::before,
   &::after {
@@ -79,4 +81,14 @@
   @include link-reset;
   font: $font-text-nav-list-mobile;
   text-transform: uppercase;
+  text-align: center;
+
+  display: block;
+  padding: 22px 0 24px;
+
+  width: 100%;
+
+  &--line {
+    border-bottom: 1px solid $background-color-9;
+  }
 }
