Стилизовал верхнюю линию у первой ссылки

--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -98,6 +98,10 @@
 
   width: 100%;
 
+  &--first-line {
+    border-top: 1px solid $background-color-9;
+  }
+
   &--line {
     border-bottom: 1px solid $background-color-9;
   }
