Добавил внутренние отступы по бокам сслыкам

--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -103,7 +103,7 @@
   text-align: center;
 
   display: block;
-  padding: 22px 0 24px;
+  padding: 22px 15px 24px;
 
   background-color: $background-color-2;
 
