--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -19,6 +19,7 @@ $color-6: #111111;
 $color-7: #eaeaea;
 $color-8: #222222;
 $color-9: #e6e6e6;
+$color-10: #62a53a;
 
 /* background-color */
 $background-color-1: #000000;
@@ -30,6 +31,7 @@ $background-color-6: #111111;
 $background-color-7: #eaeaea;
 $background-color-8: #222222;
 $background-color-9: #e6e6e6;
+$background-color-10: #62a53a;
 
 /* button-fonts */
 $font-button-nutrition-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
