--- a/source/sass/components/nutrition.scss
+++ b/source/sass/components/nutrition.scss
@@ -1,5 +1,30 @@
+.nutrition__wrapper {
+  padding-bottom: 137px;
+
+  position: relative;
+  z-index: 2;
+
+  background-color: $background-color-2;
+
+  &::before {
+    content: "";
+    width: 280px;
+    height: 270px;
+
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    z-index: 3;
+
+    transform: translateX(-50%);
+
+    background: url("../../img/nutrition-package-mobile.png") no-repeat top
+      center;
+  }
+}
+
 .nutrition__container-description {
-  padding: 27px 0 0;
+  padding: 27px 0 164px;
 
   position: relative;
   z-index: 2;
@@ -8,7 +33,7 @@
     content: "";
     width: 100%;
     height: 100%;
-    background: $background-color-3 url("../../img/bg-nutrition-mobile.png")
+    background: $background-color-10 url("../../img/bg-nutrition-mobile.png")
       no-repeat top center;
     position: absolute;
     top: 0;
@@ -21,6 +46,8 @@
   @include margin-reset;
   margin: 0 auto 25px;
 
+  width: 280px;
+
   font: $font-title-x-large-mobile;
   color: $color-2;
   text-align: center;
@@ -30,8 +57,22 @@
   @include margin-reset;
   margin: 0 auto;
 
+  width: 280px;
+
   font: $font-text-nutrition-mobile;
   text-transform: uppercase;
   color: $color-2;
   text-align: center;
+}
+
+.nutrition__link {
+  display: block;
+  margin: 0 auto;
+  padding: 12px 20px 12px;
+
+  width: 87%;
+
+  background-color: $background-color-3;
+
+  font: $font-button-nutrition-mobile;
 }
