--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -1,7 +1,7 @@
 .main-header__wrapper {
   padding: 65px 0 0;
 
-  background: url("../../img/logo-text-mobile.svg") no-repeat center 23px;
+  background: url("../img/logo-text-mobile.svg") no-repeat center 23px;
 }
 
 .main-header__link {
