выровнил элементы в питании

--- a/source/sass/components/nutrition.scss
+++ b/source/sass/components/nutrition.scss
@@ -1,6 +1,4 @@
 .nutrition__wrapper {
-  padding-bottom: 137px;
-
   position: relative;
   z-index: 2;
 
@@ -12,7 +10,7 @@
     height: 270px;
 
     position: absolute;
-    bottom: 0;
+    bottom: 44px;
     left: 50%;
     z-index: 3;
 
@@ -24,6 +22,7 @@
 
 .nutrition__container-description {
   padding: 27px 0 164px;
+  margin-bottom: 137px;
 
   position: relative;
   z-index: 2;
@@ -66,12 +65,8 @@
 
 .nutrition__link {
   display: block;
-  margin: 0 auto;
+  margin: 0 20px;
   padding: 12px 20px 12px;
-
-  width: 87%;
-
-  background-color: $background-color-3;
 
   font: $font-button-nutrition-mobile;
 }
