--- a/source/sass/components/nutrition.scss
+++ b/source/sass/components/nutrition.scss
@@ -10,7 +10,7 @@
     height: 270px;
 
     position: absolute;
-    bottom: 44px;
+    bottom: 0;
     left: 50%;
     z-index: 3;
 
@@ -22,7 +22,6 @@
 
 .nutrition__container-description {
   padding: 27px 0 164px;
-  margin-bottom: 137px;
 
   position: relative;
   z-index: 2;
