--- a/source/sass/components/program-type.scss
+++ b/source/sass/components/program-type.scss
@@ -3,6 +3,11 @@
 }
 
 .program-type__item {
+  margin: 0 20px;
+  padding: 24px 20px 0 21px;
+
+  min-height: 266px;
+
   background-color: $background-color-4;
 
   position: relative;
@@ -16,19 +21,77 @@
 
     background-color: $background-color-3;
     border-radius: 50%;
+
+    position: absolute;
+    top: 24px;
+    left: 23px;
   }
+
+  &:first-child {
+    margin-bottom: 20px;
+  }
+}
+
+.program-type__item--loss::after {
+  content: "";
+
+  width: 36px;
+  height: 50px;
+
+  background: url("../img/cat-weight-loss.svg") no-repeat;
+  background-position: 0 0;
+
+  position: absolute;
+  top: 21px;
+  left: 30px;
+  z-index: 5;
+}
+
+.program-type__item--gain::after {
+  content: "";
+
+  width: 67px;
+  height: 28px;
+
+  background: url("../img/cat-weight-gain.svg") no-repeat;
+  background-position: 0 0;
+
+  position: absolute;
+  top: 35px;
+  left: 14px;
+  z-index: 5;
 }
 
 .program-type__title {
   @include margin-reset;
   font: $font-title-medium-mobile;
   text-transform: uppercase;
+
+  margin-bottom: 30px;
+  padding-top: 6px;
+  padding-left: 71px;
 }
 
 .program-type__text {
   @include margin-reset;
+  margin-bottom: 42px;
   font: $font-text-medium-mobile;
   color: $color-5;
+
+  position: relative;
+
+  &::after {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 1px;
+
+    position: absolute;
+    bottom: -23px;
+
+    background-color: $background-color-11;
+  }
 }
 
 .program-type__link {
