--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -20,6 +20,7 @@ $color-7: #eaeaea;
 $color-8: #222222;
 $color-9: #e6e6e6;
 $color-10: #62a53a;
+$color-11: #d9d9d9;
 
 /* background-color */
 $background-color-1: #000000;
@@ -32,6 +33,7 @@ $background-color-7: #eaeaea;
 $background-color-8: #222222;
 $background-color-9: #e6e6e6;
 $background-color-10: #62a53a;
+$background-color-11: #d9d9d9;
 
 /* button-fonts */
 $font-button-nutrition-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
