--- a/source/sass/components/work-principle.scss
+++ b/source/sass/components/work-principle.scss
@@ -1,10 +1,48 @@
+.work-principle__wrapper {
+  margin: 0 20px;
+}
+
 .work-principle__title {
   @include margin-reset;
+  margin-bottom: 40px;
+  padding-left: 2px;
+
   font: $font-title-large-mobile;
+}
+
+.work-principle__list {
+  @include list-reset;
+}
+
+.work-principle__item {
+  position: relative;
+
+  display: flex;
+
+  padding-left: 1px;
+
+  &::before {
+    content: "";
+    display: block;
+
+    margin-right: 20px;
+    padding-right: 60px;
+
+    width: 60px;
+    height: 60px;
+
+    background-color: $background-color-3;
+  }
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 .work-principle__text {
   @include margin-reset;
+  padding-top: 2px;
+
   font: $font-text-medium-mobile;
   color: $color-5;
 }
