--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,7 +20,7 @@
 @import "./components/program-type.scss";
 @import "./components/work-principle.scss";
 @import "./components/living-example.scss";
-// @import "./components/cat-result.scss";
+@import "./components/cat-result.scss";
 @import "./components/location.scss";
 @import "./components/main-footer.scss";
 // @import "./components/social.scss";
