Стилизовал псевдоэлементы - линии в футере, закончил футер

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,7 +23,7 @@
 @import "./components/cat-result.scss";
 @import "./components/location.scss";
 @import "./components/main-footer.scss";
-// @import "./components/social.scss";
+@import "./components/social.scss";
 // @import "./components/catalog.scss";
 @import "./components/catalog-card.scss";
 @import "./components/additional-products.scss";
