--- a/source/sass/components/main-footer.scss
+++ b/source/sass/components/main-footer.scss
@@ -1,17 +1,60 @@
 .main-footer__wrapper {
   padding: 37px 0 0 0;
+
+  min-height: 240px;
+
+  position: relative;
+
+  &::after {
+    content: "";
+    display: block;
+
+    width: 87%;
+    height: 1px;
+
+    background-color: $background-color-11;
+
+    position: absolute;
+    top: 80px;
+    left: 21px;
+  }
 }
 
 .main-footer__logo {
   display: block;
 
   margin: 0 auto;
+  margin-bottom: 37px;
 
   width: 128px;
 }
 
 .main-footer__html-academy-logo {
   @include link-reset;
+  margin: 0 auto;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 87%;
+
   font: $font-html-academy-logo;
   color: $color-5;
+
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 1px;
+
+    background-color: $background-color-11;
+
+    position: absolute;
+    top: -21px;
+    left: 0;
+  }
 }
