--- a/source/sass/components/main-footer.scss
+++ b/source/sass/components/main-footer.scss
@@ -4,20 +4,6 @@
   min-height: 240px;
 
   position: relative;
-
-  &::after {
-    content: "";
-    display: block;
-
-    width: 87%;
-    height: 1px;
-
-    background-color: $background-color-11;
-
-    position: absolute;
-    top: 80px;
-    left: 21px;
-  }
 }
 
 .main-footer__logo {
@@ -55,6 +41,20 @@
 
     position: absolute;
     top: -21px;
+    left: 0;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 1px;
+
+    background-color: $background-color-11;
+
+    position: absolute;
+    top: -83px;
     left: 0;
   }
 }
