--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -5,4 +5,12 @@
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   text-align: center;
+
+  &:hover {
+    background-color: $background-color-14;
+  }
+
+  &:active {
+    color: rgba($color-2, 0.3);
+  }
 }
