--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -23,6 +23,7 @@ $color-10: #62a53a;
 $color-11: #d9d9d9;
 $color-12: #eaeaea;
 $color-13: #cdcdcd;
+$color-14: #5eaa2f;
 
 /* background-color */
 $background-color-1: #000000;
@@ -38,6 +39,7 @@ $background-color-10: #62a53a;
 $background-color-11: #d9d9d9;
 $background-color-12: #eaeaea;
 $background-color-13: #cdcdcd;
+$background-color-14: #5eaa2f;
 
 /* button-fonts */
 $font-button-nutrition-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
