задал внутриенние отступы блокам - секциям, убрал внешние отступы

--- a/source/sass/components/living-example.scss
+++ b/source/sass/components/living-example.scss
@@ -1,10 +1,7 @@
 .living-example {
   background-color: $background-color-12;
-}
 
-.living-example__wrapper {
-  padding-top: 25px;
-  padding-bottom: 39px;
+  padding: 25px 0 39px;
 }
 
 .living-example__title {
