--- a/source/sass/components/work-principle.scss
+++ b/source/sass/components/work-principle.scss
@@ -1,6 +1,5 @@
-.work-principle__wrapper {
-  margin: 0 20px;
-  margin-bottom: 50px;
+.work-principle {
+  padding: 0 20px 50px;
 }
 
 .work-principle__title {
