--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -4,7 +4,7 @@
   background: url("../img/logo-text-mobile.svg") no-repeat center 23px;
 
   @media (min-width: $tablet-width) {
-    padding: 52px 0 0;
+    padding: 0;
 
     background: none;
   }
@@ -24,4 +24,9 @@
   &:active {
     opacity: 0.6;
   }
+
+  // @media (min-width: $tablet-width) {
+  //   top: 0;
+  //   left: 31px;
+  // }
 }
