--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -20,12 +20,20 @@
   &:active {
     opacity: 0.6;
   }
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
 }
 
 .main-nav__list {
   @include list-reset;
 
   background-color: $background-color-2;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
 }
 
 /* закрытое меню */
@@ -49,6 +57,14 @@
 
 .main-nav--closed .main-nav__list {
   display: none;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+
+    width: 450px;
+
+    margin-left: auto;
+  }
 }
 
 /* открытое меню */
