--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -121,16 +121,13 @@
 
   display: block;
   padding: 22px 15px 24px;
+  border-bottom: 1px solid $background-color-9;
 
   background-color: $background-color-2;
 
   width: 100%;
+}
 
-  &--first-line {
-    border-top: 1px solid $background-color-9;
-  }
-
-  &--line {
-    border-bottom: 1px solid $background-color-9;
-  }
+.main-nav__item:first-child .main-nav__link {
+  border-top: 1px solid $background-color-9;
 }
