--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -1,5 +1,15 @@
+.main-header {
+  @media (min-width: $tablet-width) {
+    padding: 0 30px 0;
+
+    min-height: 54px;
+  }
+}
+
 .main-header__wrapper {
   padding: 65px 0 0;
+
+  position: relative;
 
   background: url("../img/logo-text-mobile.svg") no-repeat center 23px;
 
@@ -25,8 +35,10 @@
     opacity: 0.6;
   }
 
-  // @media (min-width: $tablet-width) {
-  //   top: 0;
-  //   left: 31px;
-  // }
+  @media (min-width: $tablet-width) {
+    top: 0;
+    left: 0;
+
+    z-index: 3;
+  }
 }
