--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -30,10 +30,6 @@
   @include list-reset;
 
   background-color: $background-color-2;
-
-  @media (min-width: $tablet-width) {
-    display: flex;
-  }
 }
 
 /* закрытое меню */
@@ -60,10 +56,14 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
-
-    width: 450px;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    gap: 5px 36px;
 
     margin-left: auto;
+    padding: 9px 0 0;
+
+    width: 450px;
   }
 }
 
@@ -126,8 +126,19 @@
   background-color: $background-color-2;
 
   width: 100%;
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-nav-list-tablet;
+
+    padding: 10px 0;
+    border-bottom: none;
+  }
 }
 
 .main-nav__item:first-child .main-nav__link {
   border-top: 1px solid $background-color-9;
+
+  @media (min-width: $tablet-width) {
+    border-top: none;
+  }
 }
