Стилизовал меню когда оно открыто

--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -30,6 +30,16 @@
   @include list-reset;
 
   background-color: $background-color-2;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  gap: 0 36px;
+
+  margin-left: auto;
+  padding: 9px 0 0;
+
+  width: 450px;
 }
 
 /* закрытое меню */
@@ -58,7 +68,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    gap: 5px 36px;
+    gap: 0 36px;
 
     margin-left: auto;
     padding: 9px 0 0;
@@ -101,7 +111,17 @@
   left: 0;
   right: 0;
 
+  display: block;
+
   width: 100%;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+
+    position: static;
+
+    width: 450px;
+  }
 }
 
 /* меню без js */
@@ -132,6 +152,20 @@
 
     padding: 10px 0;
     border-bottom: none;
+
+    &--active {
+      &::after {
+        content: "";
+        display: block;
+
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        background-color: $background-color-3;
+      }
+    }
   }
 }
 
