--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -147,6 +147,14 @@
 
   width: 100%;
 
+  &:hover {
+    color: rgba($background-color-1, 60%);
+  }
+
+  &:active {
+    color: rgba($background-color-1, 30%);
+  }
+
   @media (min-width: $tablet-width) {
     font: $font-text-nav-list-tablet;
 
